--- a/styles/home.css
+++ b/styles/home.css
@@ -1,9 +1,11 @@
+
+/*estilo del cuerpo*/
 body{
     background-color: #daede5;
     margin: 0;
     font-family: 'Montserrat', sans-serif;
 }
-
+/*estilo del header*/
 header{
     display: flex;
     background-color: #15505d;
@@ -39,4 +41,61 @@ header div{
     margin-left: 1rem;
 }
 
+/*estilo title,description*/
+main{
+    display: flex;
+    justify-content: flex-start; 
+    align-items: center; 
+    height: 50vh; 
+    margin-left: 4rem; /
+}
+.task-form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 40%;
+}
+.form-group label, .date-input label {
+    font-size: 18px;
+    color: #15505d;
+}
+.form-group input, 
+.form-group textarea,.date-input {
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
+    box-sizing: border-box;
+    resize: none;
+}
+/*estilo calendario*/
+.date-input {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    border: none;
+}
 
+.date-input svg {
+    color: #15505d;
+}
+
+.date-input input {
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 0.5rem;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.date-input button {
+    background-color: #15505d;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
+}
