--- a/styles/home.css
+++ b/styles/home.css
@@ -60,7 +60,7 @@ main{
     color: #15505d;
 }
 .form-group input, 
-.form-group textarea,.date-input {
+.form-group textarea {
     width: 100%;
     padding: 0.5rem;
     border: 1px solid #ccc;
