--- a/styles/home.css
+++ b/styles/home.css
@@ -44,6 +44,17 @@ header div{
 /*estilo title,description*/
 main{
     display: flex;
+    align-content: space-between;
+    gap: 5rem;
+    margin: 2rem;
+
+}
+.task-form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 40%;
+    display: flex;
     height: 50vh; 
     margin-left: 4rem; 
     flex-direction: column;
@@ -53,13 +64,7 @@ main{
     position: sticky; 
     top: 70px; 
     left: 0; 
-    z-index: 1000; 
-}
-.task-form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    width: 40%;
+    z-index: 1000;
 }
 .form-group label, .date-container label {
     font-size: 18px;
@@ -115,4 +120,28 @@ main{
 }
 #taskDescription{
     height: 200px;
+}
+#task-container{
+    width: 60%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5%;
+    margin-top: 5%;
+    align-content: center;
+}
+.task {
+    align-items: center;
+    background-color: #15505d;
+    color: white;
+    border-radius: 10px;
+    box-sizing: border-box; 
+    width: 40%;
+    margin-bottom: 2px;
+    margin-top: 2px;
+    height: 15%;
+    padding: 1rem;
+}
+.task h4{
+    margin-top: 2px;
+    margin-left: 10px;
 }
