--- a/styles/home.css
+++ b/styles/home.css
@@ -126,7 +126,7 @@ main{
     display: flex;
     flex-wrap: wrap;
     gap: 5%;
-    margin-top: 5%;
+    margin-top: 9%;
     align-content: center;
 }
 .task {
@@ -135,13 +135,35 @@ main{
     color: white;
     border-radius: 10px;
     box-sizing: border-box; 
-    width: 40%;
+    width: 45%;
     margin-bottom: 2px;
     margin-top: 2px;
     height: 15%;
     padding: 1rem;
+    position: relative;
+}
+.task-header{
+    display: flex;
+}
+.delete-button {
+    position: absolute;
+    bottom: 10px; 
+    right: 10px;  
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    color: #afd1c6; 
+    font-size: 1.5em; 
+    padding: 0;
+    transition: color 0.2s ease-in-out; 
 }
 .task h4{
     margin-top: 2px;
     margin-left: 10px;
+}
+.task-checkbox {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    transform: scale(2);
 }
