--- a/styles/home.css
+++ b/styles/home.css
@@ -4,40 +4,24 @@ body{
     background-color: #daede5;
     margin: 0;
     font-family: 'Montserrat', sans-serif;
+    padding: 0;
+    overflow-x:hidden;
 }
 /*estilo del header*/
 header{
     display: flex;
     background-color: #15505d;
-    justify-content: space-between;
     width: 100vw; 
-    padding: 0 4rem 0 4rem; 
+    padding: 0 0 0 6rem; 
     box-sizing: border-box;
-}
-header div{
-    display: flex;
     color: white;
     align-items: center;
+}
 
-}
-#user-container button{
-    background-color: #eefb03;
-    width: 15rem;
-    height: min-content;
-    border-radius: 11px; 
-    padding: 0.5rem 1rem; 
-    border: none; 
-    cursor: pointer; 
-    font-size: 18px;
-}
-#user-container p{
-    font-size: 22px;
-    margin-right: 2rem;
-}
-#logo-container img{
+img{
     height: 50px;
 }
-#logo-container h1{
+h1{
     margin-left: 1rem;
 }
 
@@ -45,15 +29,15 @@ header div{
 main{
     display: flex;
     align-content: space-between;
-    gap: 5rem;
-    margin: 2rem;
-
+    margin: 2rem; 
+    gap: 6%;
+    width: 100vw; 
 }
 .task-form {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    width: 40%;
+    width: calc(40%);
     display: flex;
     height: 50vh; 
     margin-left: 4rem; 
@@ -122,12 +106,12 @@ main{
     height: 200px;
 }
 #task-container{
-    width: 60%;
+    width: calc(60%);
     display: flex;
     flex-wrap: wrap;
-    gap: 5%;
-    margin-top: 9%;
-    align-content: center;
+    gap: 8%;
+    height: fit-content;
+    max-width: 100%;
 }
 .task {
     align-items: center;
@@ -135,12 +119,13 @@ main{
     color: white;
     border-radius: 10px;
     box-sizing: border-box; 
-    width: 45%;
-    margin-bottom: 2px;
-    margin-top: 2px;
-    height: 15%;
+    position: relative;
+    width: 40%;
+    height: 200px;
+    overflow: hidden;
     padding: 1rem;
     position: relative;
+    margin-top: 2rem;
 }
 .task-header{
     display: flex;
@@ -167,3 +152,10 @@ main{
     right: 10px;
     transform: scale(2);
 }
+.COMPLETED{
+    background: #3c895f;
+}
+.task:hover{
+    border: 1px solid #eefb03;
+}
+
