--- a/styles/home.css
+++ b/styles/home.css
@@ -105,6 +105,7 @@ main{
 #taskDescription{
     height: 200px;
 }
+/*estilo de las tareas*/
 #task-container{
     width: calc(60%);
     display: flex;
@@ -126,6 +127,7 @@ main{
     padding: 1rem;
     position: relative;
     margin-top: 2rem;
+    transition: transform 0.3s ease;
 }
 .task-header{
     display: flex;
@@ -140,7 +142,6 @@ main{
     color: #afd1c6; 
     font-size: 1.5em; 
     padding: 0;
-    transition: color 0.2s ease-in-out; 
 }
 .task h4{
     margin-top: 2px;
@@ -157,5 +158,6 @@ main{
 }
 .task:hover{
     border: 1px solid #eefb03;
+    transform: scale(1.08); 
 }
 
